sửa lại api athentication

--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@ CLOUDINARY_API_SECRET = stp8v30HPkyE-TeWUCf0HxTIiCc
 
 JWT_ACCESS_TOKEN_SECRET = accesstoken
 JWT_REFRESH_TOKEN_SECRET = refreshtoken
+
+EMAIL_USER = cuahangluxe@gmail.com
+EMAIL_PASS = fuph ggix gudv cowh
+JWT_VERIFICATION_TOKEN_SECRET = your-verification-token-secret
+CLIENT_URL = http://localhost:3005
