--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
@@ -26,6 +27,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9",
+    "qs": "^6.14.0",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
