--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL = mongodb://127.0.0.1:27017/fashion_web25
+DATABASE_URL = mongodb+srv://phucle415776:DDqWAklD5n5VUyOh@cluster0.xur8iux.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=Cluster0
 
 CLOUDINARY_CLOUD_NAME = dohwmkapy
 CLOUDINARY_API_KEY = 175633463682351
