--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL = mongodb+srv://phucle415776:DDqWAklD5n5VUyOh@cluster0.xur8iux.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_URL = mongodb+srv://luxestore:Luxestore123@cluster0.xur8iux.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 CLOUDINARY_CLOUD_NAME = dohwmkapy
 CLOUDINARY_API_KEY = 175633463682351
@@ -10,7 +10,7 @@ JWT_REFRESH_TOKEN_SECRET = refreshtoken
 EMAIL_USER = cuahangluxe@gmail.com
 EMAIL_PASS = fuph ggix gudv cowh
 JWT_VERIFICATION_TOKEN_SECRET = your-verification-token-secret
-CLIENT_URL = http://localhost:3003
+CLIENT_URL = https://fe-user-fashion-25.vercel.app
 
 NEXT_PUBLIC_FACEBOOK_APP_ID=3092505054234259
 FACEBOOK_APP_SECRET=5c89cd40c27d716e9df753e67d5a7ac6
