debug url atlas

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL = mongodb+srv://luxestore:Luxestore123@cluster0.xur8iux.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_URL = mongodb+srv://luxestore:Luxestore123@cluster0.xur8iux.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=Cluster0
 
 CLOUDINARY_CLOUD_NAME = dohwmkapy
 CLOUDINARY_API_KEY = 175633463682351
