change url atlas

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DATABASE_URL = mongodb+srv://luxestore:Luxestore123@cluster0.xur8iux.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_URL = mongodb+srv://cuahangluxe:cCYqFHrS45jFLbpo@clusterluxestore.zptdpa7.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=ClusterLuxeStore
 
 CLOUDINARY_CLOUD_NAME = dohwmkapy
 CLOUDINARY_API_KEY = 175633463682351
-CLOUDINARY_API_SECRET = stp8v30HPkyE-TeWUCf0HxTIiCc
+CLOUDINARY_API_SECRET = stp8v30HPkyE-TeWUCf0HxTIiCcF
 
 JWT_ACCESS_TOKEN_SECRET = accesstoken
 JWT_REFRESH_TOKEN_SECRET = refreshtoken
