thây đôi url role customer và api lấy cate và brand

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ JWT_REFRESH_TOKEN_SECRET = refreshtoken
 EMAIL_USER = cuahangluxe@gmail.com
 EMAIL_PASS = fuph ggix gudv cowh
 JWT_VERIFICATION_TOKEN_SECRET = your-verification-token-secret
-CLIENT_URL = https://luxe-customer.vercel.app
+CLIENT_URL = https://luxe-customer-3h3s.vercel.app
 
 NEXT_PUBLIC_FACEBOOK_APP_ID=3092505054234259
 FACEBOOK_APP_SECRET=5c89cd40c27d716e9df753e67d5a7ac6
