change url database File .env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL = mongodb://localhost:27017/fashion_web25
+DATABASE_URL = mongodb+srv://cuahangluxe:cCYqFHrS45jFLbpo@clusterluxestore.zptdpa7.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=ClusterLuxeStore
 
 CLOUDINARY_CLOUD_NAME = dohwmkapy
 CLOUDINARY_API_KEY = 175633463682351
