--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Biến môi trường cho ứng dụng
+# DATABASE_URL = mongodb://localhost:27017/
 DATABASE_URL = mongodb+srv://cuahangluxe:cCYqFHrS45jFLbpo@clusterluxestore.zptdpa7.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=ClusterLuxeStore
-
 CLOUDINARY_CLOUD_NAME = dohwmkapy
 CLOUDINARY_API_KEY = 175633463682351
 CLOUDINARY_API_SECRET = stp8v30HPkyE-TeWUCf0HxTIiCcF
@@ -11,7 +11,8 @@ JWT_REFRESH_TOKEN_SECRET = refreshtoken
 EMAIL_USER = cuahangluxe@gmail.com
 EMAIL_PASS = fuph ggix gudv cowh
 JWT_VERIFICATION_TOKEN_SECRET = your-verification-token-secret
-CLIENT_URL = http://localhost:3003
+# CLIENT_URL = http://localhost:3003
+CLIENT_URL = https://luxe-customer-web-25-local.vercel.app
 
 NEXT_PUBLIC_FACEBOOK_APP_ID=3092505054234259
 FACEBOOK_APP_SECRET=5c89cd40c27d716e9df753e67d5a7ac6
