sửa file paymentWithVNPAY.js

--- a/.env
+++ b/.env
@@ -17,11 +17,11 @@ JWT_VERIFICATION_TOKEN_SECRET = your-verification-token-secret
 # CLIENT_URL = http://localhost:3003 
 CLIENT_URL = https://luxe-customer-web-25-local.vercel.app
 
-NEXT_PUBLIC_FACEBOOK_APP_ID=3092505054234259
-FACEBOOK_APP_SECRET=5c89cd40c27d716e9df753e67d5a7ac6
+NEXT_PUBLIC_FACEBOOK_APP_ID = 3092505054234259
+FACEBOOK_APP_SECRET = 5c89cd40c27d716e9df753e67d5a7ac6
 
 # VPAY SANDBOX
-VNP_TMNCODE = 5F6U2XP5
-VNP_HASHSECRET = X52DQXDT260B45XEEBS51Z5IITZBOSZM
-VNP_RETURNURL = https://luxe-customer-web-25-local.vercel.app/payment
-VNP_URL = https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNP_TMNCODE=5F6U2XP5
+VNP_HASHSECRET=X52DQXDT260B45XEEBS51Z5IITZBOSZM
+VNP_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNP_RETURNURL=https://luxe-customer-web-25-local.vercel.app/payment
