sửa file paymentWithVNPAY.js lần 11

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ CLIENT_URL = https://luxe-customer-web-25-local.vercel.app
 NEXT_PUBLIC_FACEBOOK_APP_ID = 3092505054234259
 FACEBOOK_APP_SECRET = 5c89cd40c27d716e9df753e67d5a7ac6
 
-# VPAY SANDBOX
+# VPAY SANDBOX (CẤM ĐỤNG VÀO NHÓE ;)))
 VNP_TMNCODE=5F6U2XP5
 VNP_HASHSECRET=X52DQXDT260B45XEEBS51Z5IITZBOSZM
 VNP_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
