tích hợp cổng thanh toán momo lần 1

--- a/.env
+++ b/.env
@@ -25,3 +25,8 @@ VNP_TMNCODE=5F6U2XP5
 VNP_HASHSECRET=X52DQXDT260B45XEEBS51Z5IITZBOSZM
 VNP_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 VNP_RETURNURL=https://luxe-customer-web-25-local.vercel.app/payment
+
+# MOMO SANDBOX (CẤM ĐỤNG VÀO NHÓE ;)))
+MOMO_PARTNER_CODE=MOMO
+MOMO_ACCESS_KEY=F8BBA842ECF85
+MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
