tích hợp cổng thanh toán vnpay

--- a/.env
+++ b/.env
@@ -20,11 +20,11 @@ CLIENT_URL = https://luxe-customer-web-25-local.vercel.app
 NEXT_PUBLIC_FACEBOOK_APP_ID = 3092505054234259
 FACEBOOK_APP_SECRET = 5c89cd40c27d716e9df753e67d5a7ac6
 
-# VPAY SANDBOX (CẤM ĐỤNG VÀO NHÓE ;)))
-VNP_TMNCODE=5F6U2XP5
-VNP_HASHSECRET=X52DQXDT260B45XEEBS51Z5IITZBOSZM
+# VNPAY SANDBOX (CẤM ĐỤNG VÀO NHÓE ;)))
+VNP_TMNCODE=2QXUI4JG
+VNP_HASH_SECRET=SECRETKEY123456789
 VNP_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-VNP_RETURNURL=https://luxe-customer-web-25-local.vercel.app/payment
+VNP_RETURN_URL=https://luxe-customer-web-25-local.vercel.app/payment
 
 # MOMO SANDBOX (CẤM ĐỤNG VÀO NHÓE ;)))
 MOMO_PARTNER_CODE=MOMO
