--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Biến môi trường cho ứng dụng
 
-# DATABASE_URL = mongodb://localhost:27017/
+# DATABASE_URL = mongodb://localhost:27017/fashion_web25
 DATABASE_URL = mongodb+srv://cuahangluxe:cCYqFHrS45jFLbpo@clusterluxestore.zptdpa7.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=ClusterLuxeStore
 
 CLOUDINARY_CLOUD_NAME = dohwmkapy
