push code về local

--- a/.env
+++ b/.env
@@ -23,10 +23,10 @@ NEXT_PUBLIC_FACEBOOK_APP_ID = 3092505054234259
 FACEBOOK_APP_SECRET = 5c89cd40c27d716e9df753e67d5a7ac6
 
 # VNPAY SANDBOX (CẤM ĐỤNG VÀO NHÓE ;)))
-VNP_TMNCODE=2QXUI4JG
-VNP_HASH_SECRET=SECRETKEY123456789
-VNP_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-VNP_RETURN_URL=https://luxe-customer-web-25-local.vercel.app/payment
+VNP_TMNCODE="2QXUI4JG"
+VNP_HASH_SECRET="SECRETKEY123456789"
+VNP_URL="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
+VNP_RETURN_URL="https://luxe-customer-web-25-local.vercel.app/payment"
 
 # MOMO SANDBOX (CẤM ĐỤNG VÀO NHÓE ;)))
 MOMO_PARTNER_CODE=MOMO
