--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9",
+    "pdfkit": "^0.17.1",
     "qs": "^6.14.0",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
