debug các lỗi tồn đọng

--- a/.env
+++ b/.env
@@ -15,18 +15,19 @@ EMAIL_USER = cuahangluxe@gmail.com
 EMAIL_PASS = fuph ggix gudv cowh
 JWT_VERIFICATION_TOKEN_SECRET = your-verification-token-secret
 
-CLIENT_URL = http://localhost:3003 
-# CLIENT_URL = https://luxe-customer-web-25-local.vercel.app
+# NEXT_PUBLIC_API_BASE_URL = https://luxe-customer-web-25-local.vercel.app
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3003
 
 # Stripe
 NEXT_PUBLIC_FACEBOOK_APP_ID = 3092505054234259
 FACEBOOK_APP_SECRET = 5c89cd40c27d716e9df753e67d5a7ac6
 
 # VNPAY SANDBOX (CẤM ĐỤNG VÀO NHÓE ;)))
-VNP_TMNCODE="2QXUI4JG"
-VNP_HASH_SECRET="SECRETKEY123456789"
-VNP_URL="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
-VNP_RETURN_URL="https://luxe-customer-web-25-local.vercel.app/payment"
+VNPAY_TMN_CODE=M1QHIL6B
+VNPAY_HASH_SECRET=413AH0HME2AQVHO602PBLH336GMDIOVX
+VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_API=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+VNPAY_RETURN_URL=http://localhost:3003/payment
 
 # MOMO SANDBOX (CẤM ĐỤNG VÀO NHÓE ;)))
 MOMO_PARTNER_CODE=MOMO
