Role Customer Dome

--- a/.env
+++ b/.env
@@ -7,13 +7,15 @@ CLOUDINARY_CLOUD_NAME = dohwmkapy
 CLOUDINARY_API_KEY = 175633463682351
 CLOUDINARY_API_SECRET = stp8v30HPkyE-TeWUCf0HxTIiCcF
 
+# JWT variable envorament
 JWT_ACCESS_TOKEN_SECRET = accesstoken
 JWT_REFRESH_TOKEN_SECRET = refreshtoken
+JWT_VERIFICATION_TOKEN_SECRET = your-verification-token-secret
 
 # Email configuration
 EMAIL_USER = cuahangluxe@gmail.com
 EMAIL_PASS = fuph ggix gudv cowh
-JWT_VERIFICATION_TOKEN_SECRET = your-verification-token-secret
+
 
 # NEXT_PUBLIC_API_BASE_URL = https://luxe-customer-web-25-local.vercel.app
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3003
