--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Biến môi trường cho ứng dụng
 
-# DATABASE_URL = mongodb://localhost:27017/fashion_web25
-DATABASE_URL = mongodb+srv://cuahangluxe:cCYqFHrS45jFLbpo@clusterluxestore.zptdpa7.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=ClusterLuxeStore
+DATABASE_URL = mongodb://localhost:27017/fashion_web25
+# DATABASE_URL = mongodb+srv://cuahangluxe:cCYqFHrS45jFLbpo@clusterluxestore.zptdpa7.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=ClusterLuxeStore
 
 CLOUDINARY_CLOUD_NAME = dohwmkapy
 CLOUDINARY_API_KEY = 175633463682351
@@ -14,19 +14,14 @@ EMAIL_USER = cuahangluxe@gmail.com
 EMAIL_PASS = fuph ggix gudv cowh
 JWT_VERIFICATION_TOKEN_SECRET = your-verification-token-secret
 
-# CLIENT_URL = http://localhost:3003 
-CLIENT_URL = https://luxe-customer-web-25-local.vercel.app
+CLIENT_URL = http://localhost:3003 
+# CLIENT_URL = https://luxe-customer-web-25-local.vercel.app
 
-NEXT_PUBLIC_FACEBOOK_APP_ID = 3092505054234259
-FACEBOOK_APP_SECRET = 5c89cd40c27d716e9df753e67d5a7ac6
+NEXT_PUBLIC_FACEBOOK_APP_ID=3092505054234259
+FACEBOOK_APP_SECRET=5c89cd40c27d716e9df753e67d5a7ac6
 
-# VNPAY SANDBOX (CẤM ĐỤNG VÀO NHÓE ;)))
-VNP_TMNCODE=2QXUI4JG
-VNP_HASH_SECRET=SECRETKEY123456789
-VNP_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-VNP_RETURN_URL=https://luxe-customer-web-25-local.vercel.app/payment
-
-# MOMO SANDBOX (CẤM ĐỤNG VÀO NHÓE ;)))
-MOMO_PARTNER_CODE=MOMO
-MOMO_ACCESS_KEY=F8BBA842ECF85
-MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
+# VPAY SANDBOX
+VNP_TMNCODE = 5F6U2XP5
+VNP_HASHSECRET = X52DQXDT260B45XEEBS51Z5IITZBOSZM
+VNP_RETURNURL = https://luxe-customer-web-25-local.vercel.app/payment
+VNP_URL = https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
