--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9",
     "qs": "^6.14.0",
+    "react-hot-toast": "^2.5.2",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
