--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Biến môi trường cho ứng dụng
 
-DATABASE_URL = mongodb://localhost:27017/fashion_web25
-# DATABASE_URL = mongodb+srv://cuahangluxe:cCYqFHrS45jFLbpo@clusterluxestore.zptdpa7.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=ClusterLuxeStore
+# DATABASE_URL = mongodb://localhost:27017/fashion_web25
+DATABASE_URL = mongodb+srv://cuahangluxe:cCYqFHrS45jFLbpo@clusterluxestore.zptdpa7.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=ClusterLuxeStore
 
 CLOUDINARY_CLOUD_NAME = dohwmkapy
 CLOUDINARY_API_KEY = 175633463682351
@@ -16,9 +16,8 @@ JWT_VERIFICATION_TOKEN_SECRET = your-verification-token-secret
 EMAIL_USER = cuahangluxe@gmail.com
 EMAIL_PASS = fuph ggix gudv cowh
 
-
-# NEXT_PUBLIC_API_BASE_URL = https://luxe-customer-web-25-local.vercel.app
-NEXT_PUBLIC_API_BASE_URL=http://localhost:3003
+NEXT_PUBLIC_API_BASE_URL = https://luxe-customer-web-25-local.vercel.app
+# NEXT_PUBLIC_API_BASE_URL=http://localhost:3003
 
 # Stripe
 NEXT_PUBLIC_FACEBOOK_APP_ID = 3092505054234259
