sửa .env and index,js

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ EMAIL_USER = cuahangluxe@gmail.com
 EMAIL_PASS = fuph ggix gudv cowh
 
 # NEXT_PUBLIC_API_BASE_URL = https://luxe-customer-web-25-local.vercel.app
-NEXT_PUBLIC_API_BASE_URL=http://localhost:3003
+NEXT_PUBLIC_API_BASE_URL = http://localhost:3003
 
 # Stripe
 NEXT_PUBLIC_FACEBOOK_APP_ID = 3092505054234259
