thay đổi các url để deploy lên render.com

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # Biến môi trường cho ứng dụng
-DATABASE_URL=mongodb://localhost:27017/fashion_web25
+DATABASE_URL="mongodb+srv://fashion_web25:luxe123%40@luxeshop.yxjmzyk.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=LuxeShop"
 
 CLOUDINARY_CLOUD_NAME=dohwmkapy
 CLOUDINARY_API_KEY=175633463682351
@@ -12,9 +12,9 @@ JWT_VERIFICATION_TOKEN_SECRET=your-verification-token-secret
 
 # Email configuration
 EMAIL_USER=cuahangluxe@gmail.com
-EMAIL_PASS=fuph ggix gudv cowh
+EMAIL_PASS="fuph ggix gudv cowh"
 
-NEXT_PUBLIC_API_BASE_URL=http://localhost:3003
+NEXT_PUBLIC_API_BASE_URL=https://luxe-customer-web-25-local.vercel.app
 
 # Stripe FB
 NEXT_PUBLIC_FACEBOOK_APP_ID=3092505054234259
