taodata trên mongo cloud

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # Biến môi trường cho ứng dụng
-DATABASE_URL="mongodb+srv://fashion_web25:luxe123%40@luxeshop.yxjmzyk.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=LuxeShop"
+DATABASE_URL=mongodb+srv://fashion_web25:luxe123%40@luxeshop.yxjmzyk.mongodb.net/fashion_web25?retryWrites=true&w=majority&appName=LuxeShop
 
 CLOUDINARY_CLOUD_NAME=dohwmkapy
 CLOUDINARY_API_KEY=175633463682351
