thay đổi variable vn_return

--- a/.env.production
+++ b/.env.production
@@ -25,7 +25,7 @@ VNPAY_TMN_CODE=M1QHIL6B
 VNPAY_HASH_SECRET=413AH0HME2AQVHO602PBLH336GMDIOVX
 VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 VNPAY_API=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
-VNPAY_RETURN_URL=http://localhost:3003/payment
+VNPAY_RETURN_URL=https://luxe-customer-web-25-local.vercel.app/payment
 
 # MOMO SANDBOX (CẤM ĐỤNG VÀO NHÓE ;)))
 MOMO_PARTNER_CODE=MOMO
